<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_australia">Canberra is the capital city of Australia</string>
    <string name="question_oceans">The pacific ocean is larger than the atlantic ocean</string>
    <string name="question_africa">The source of the river nile is in Egypt</string>
    <string name="question_mideast">The suez canal connects the red sea and the indian ocean</string>
    <string name="question_americas">The amazon river is the longest river in the americas</string>
    <string name="question_asia">Lake baikal is the world\'s oldest and deepest fresh water lake</string>
    <string name="btn_true">TRUE</string>
    <string name="btn_false">FALSE</string>
    <string name="correct_toast">Correct answer selected</string>
    <string name="incorrect_toast">Incorrect answer selected</string>
    <string name="btn_next">Next Question</string>
    <string name="cheat_button">Cheat</string>
    <string name="judgement_toast">Cheating is wrong</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
</resources>