<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_australia"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_true"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_false"
            android:gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:drawableRight="@drawable/ic_baseline_arrow_right_24"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"/>

</FrameLayout>